--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "dockyard",
-  "version": "1.0.0",
-  "description": "0.1.0",
+  "version": "0.1.0",
+  "description": "Kancolle tool",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "MIT",
+  "dependencies": {
+    "babel-core": "^6.1.2",
+    "immutable": "^3.7.5",
+    "react": "^0.14.2",
+    "webpack": "^1.12.3"
+  }
 }
