--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "Kancolle tool",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "NODE_ENV=dev webpack --progres --colors --watch"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.1.2",
+    "babel-loader": "^6.0.1",
+    "babel-preset-es2015": "^6.1.2",
+    "html-webpack-plugin": "^1.6.2",
     "immutable": "^3.7.5",
     "react": "^0.14.2",
     "webpack": "^1.12.3"
