--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-es2015": "^6.1.2",
     "html-webpack-plugin": "^1.6.2",
     "immutable": "^3.7.5",
+    "json-loader": "^0.5.3",
     "react": "^0.14.2",
     "webpack": "^1.12.3"
   }
