--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-core": "^6.1.2",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.1.2",
+    "babel-preset-react": "^6.1.2",
+    "babel-preset-stage-1": "^6.1.2",
     "html-webpack-plugin": "^1.6.2",
     "immutable": "^3.7.5",
     "json-loader": "^0.5.3",
