--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=dev webpack --progres --colors --watch"
   },
-  "author": "",
+  "author": "Stefan Rimaila <stefan@rimaila.fi>",
+  "repository": "https://github.com/rensouhou/dockyard.git",
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.1.2",
@@ -15,6 +16,7 @@
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
     "babel-preset-stage-1": "^6.1.2",
+    "extract-text-webpack-plugin": "^0.9.1",
     "html-webpack-plugin": "^1.6.2",
     "immutable": "^3.7.5",
     "jquery": "^2.1.4",
