--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
     "babel-preset-stage-1": "^6.1.2",
+    "clean-webpack-plugin": "^0.1.4",
     "extract-text-webpack-plugin": "^0.9.1",
     "html-webpack-plugin": "^1.6.2",
     "immutable": "^3.7.5",
