--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.1.2",
+    "babel-eslint": "^4.1.5",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
@@ -23,6 +24,7 @@
     "immutable": "^3.7.5",
     "jquery": "^2.1.4",
     "json-loader": "^0.5.3",
+    "lodash": "^3.10.1",
     "preprocessor-loader": "^1.0.5",
     "react": "^0.14.2",
     "webpack": "^1.12.3"
