--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "extract-text-webpack-plugin": "^0.9.1",
     "html-webpack-plugin": "^1.6.2",
     "immutable": "^3.7.5",
+    "invariant": "^2.1.2",
     "jquery": "^2.1.4",
     "json-loader": "^0.5.3",
     "keymirror": "^0.1.1",
