--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "keymirror": "^0.1.1",
     "lodash": "^3.10.1",
     "preprocessor-loader": "^1.0.5",
+    "query-string": "^3.0.0",
     "react": "^0.14.2",
     "webpack": "^1.12.3"
   }
