--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-core": "^6.1.2",
     "babel-eslint": "^4.1.5",
     "babel-loader": "^6.0.1",
+    "babel-plugin-syntax-flow": "^6.1.18",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
     "babel-preset-stage-1": "^6.1.2",
