--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=dev webpack --progres --colors --watch",
+    "start": "NODE_ENV=dev webpack --progress --colors --watch",
     "build:dev": "NODE_ENV=dev webpack --progress --colors"
   },
   "author": "Stefan Rimaila <stefan@rimaila.fi>",
@@ -21,6 +21,7 @@
     "babel-preset-stage-1": "^6.1.2",
     "clean-webpack-plugin": "^0.1.4",
     "extract-text-webpack-plugin": "^0.9.1",
+    "firebase": "^2.3.2",
     "html-webpack-plugin": "^1.6.2",
     "immutable": "^3.7.5",
     "invariant": "^2.1.2",
@@ -32,5 +33,8 @@
     "query-string": "^3.0.0",
     "react": "^0.14.2",
     "webpack": "^1.12.3"
+  },
+  "devDependencies": {
+    "firebase-schema": "0.0.8"
   }
 }
