--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
     "babel-preset-stage-1": "^6.1.2",
+    "camel-case": "^1.2.0",
     "clean-webpack-plugin": "^0.1.4",
     "extract-text-webpack-plugin": "^0.9.1",
     "firebase": "^2.3.2",
