--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Kancolle tool",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "NODE_ENV=dev webpack --progress --colors --watch",
     "build:dev": "NODE_ENV=dev webpack --progress --colors"
   },
@@ -26,13 +26,15 @@
     "html-webpack-plugin": "^1.6.2",
     "immutable": "^3.7.5",
     "invariant": "^2.1.2",
+    "jest-cli": "^0.8.0",
     "jquery": "^2.1.4",
     "json-loader": "^0.5.3",
     "keymirror": "^0.1.1",
     "lodash": "^3.10.1",
     "preprocessor-loader": "^1.0.5",
     "query-string": "^3.0.0",
-    "react": "^0.14.2",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "webpack": "^1.12.3"
   },
   "devDependencies": {
