--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "query-string": "^3.0.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "ts-loader": "^0.7.2",
     "webpack": "^1.12.3"
   },
   "devDependencies": {
