--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dockyard",
   "version": "0.1.0",
-  "description": "Kancolle tool",
+  "description": "A Kancolle tool",
   "main": "index.js",
   "scripts": {
     "test": "jest",
@@ -20,6 +20,7 @@
     "babel-preset-react": "^6.1.2",
     "babel-preset-stage-1": "^6.1.2",
     "camel-case": "^1.2.0",
+    "cjson": "^0.3.2",
     "clean-webpack-plugin": "^0.1.4",
     "extract-text-webpack-plugin": "^0.9.1",
     "firebase": "^2.3.2",
@@ -39,6 +40,7 @@
     "webpack": "^1.12.3"
   },
   "devDependencies": {
+    "cjson": "^0.3.2",
     "firebase-schema": "0.0.8"
   }
 }
