--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "camel-case": "^1.2.0",
     "cjson": "^0.3.2",
     "clean-webpack-plugin": "^0.1.4",
+    "decamelize": "^1.1.1",
     "extract-text-webpack-plugin": "^0.9.1",
     "firebase": "^2.3.2",
     "html-webpack-plugin": "^1.6.2",
     "immutable": "^3.7.5",
-    "invariant": "^2.1.2",
+    "invariant": "^2.2.0",
     "jest-cli": "^0.8.0",
     "jquery": "^2.1.4",
     "json-loader": "^0.5.3",
@@ -37,6 +38,7 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "ts-loader": "^0.7.2",
+    "uppercamelcase": "^1.1.0",
     "webpack": "^1.12.3"
   },
   "devDependencies": {
