--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "decamelize": "^1.1.1",
     "extract-text-webpack-plugin": "^0.9.1",
     "firebase": "^2.3.2",
+    "flux": "^2.1.1",
     "html-webpack-plugin": "^1.6.2",
     "immutable": "^3.7.5",
     "invariant": "^2.2.0",
