Base store logic testing

--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "cjson": "^0.3.2",
     "clean-webpack-plugin": "^0.1.4",
     "decamelize": "^1.1.1",
+    "dexie": "^1.2.0",
     "eslint": "^1.10.3",
     "extract-text-webpack-plugin": "^0.9.1",
     "firebase": "^2.3.2",
     "flux": "^2.1.1",
+    "flux-standard-action": "^0.6.0",
     "html-webpack-plugin": "^1.6.2",
     "immutable": "^3.7.5",
     "invariant": "^2.2.0",
