--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "preprocessor-loader": "^1.0.5",
     "query-string": "^3.0.0",
     "ramda": "^0.18.0",
+    "ramda-fantasy": "^0.4.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "redux": "^3.0.5",
