--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-eslint": "^4.1.5",
     "babel-loader": "^6.0.1",
     "babel-plugin-syntax-flow": "^6.1.18",
+    "babel-plugin-transform-node-env-inline": "^6.3.13",
     "babel-plugin-transform-object-assign": "^6.3.13",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
